Fixed issue where navbar doesn't collapse on mobile, added indicator whether restaurant is open or closed to footer

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@ body {
 
 @media screen and (max-width: 576px) {
   body {
-    margin-bottom: 36rem;
+    margin-bottom: 39rem;
   }
 }
 
